# Experimental-Utilities

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build_and_test.yml
benchmarks/: CMakeLists.txt
benchmarks/src/expu/containers/: darray.cpp
benchmarks/src/smm/containers/: darray.cpp
cmake/: add_gtest.cmake
docs/darray_benchmarks/: darray_trivial_pushback_bm.json  darray_vector_bench_res.json  geometric_growth_comp.json  graph_bench.py  vector_trivial_pushback_bm.json
include/expu/: debug.hpp  defines.hpp  mem_utils.hpp  test_utils.hpp  traits_ext.hpp
include/expu/_legacy/: mem_utils.hpp
include/expu/_legacy/meta/: meta_utils.hpp
include/expu/containers/: contiguous_container.hpp  darray.hpp  fixed_array.hpp  fuple.hpp  linear_map.hpp
include/expu/iterators/: concatenated_iterator.hpp  iter_utils.hpp  searching.hpp  seq_iter.hpp  sorting.hpp
include/expu/maths/: basic_maths.hpp
include/expu/meta/: function_traits.hpp  function_utils.hpp  int_seq.hpp  meta_utils.hpp  typelist_set_operations.hpp
include/expu/testing/: checked_allocator.hpp  gtest_utils.hpp  iterator_downcast.hpp  test_allocator.hpp  test_type.hpp  throw_on_type.hpp
include/smm/: debug.hpp  int_seq.hpp  iter_utils.hpp  mem_utils.hpp  traits_ext.hpp
include/smm/containers/: darray.hpp
include/smm/iterators/: sorting.hpp
tests/: CMakeLists.txt  counters.hpp  darray.cpp  fixed_array.cpp  fuple.cpp  linear_map.cpp  sequential_containers.cpp  typelist_set_operations.cpp
tests/legacy/: counters.hpp  darray.cpp
tests/src/expu/: meta_sort.hpp  test_utils.hpp
tests/src/expu/containers/: darray.cpp  darray_iters.cpp  named_requirements.cpp  named_requirements.hpp
tests/src/expu/wrappers/: counted_allocator.cpp  counted_allocator.hpp  disabled_wrapper.cpp  disabled_wrapper.hpp  disabled_wrappers.cpp
tests/src/smm/: int_iterator.hpp  meta_sort.hpp
tests/src/smm/containers/: darray.cpp  darray_iters.cpp  named_requirements.hpp
tests/src/smm/wrappers/: cond_allocator.hpp  counted_wrapper.hpp  disabled_wrapper.hpp
